<resources>
    <string name="app_name">万能识图</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_home">首页</string>
    <string name="title_car">项目</string>
    <string name="title_mine">我的</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="login">登录</string>
    <string name="login_exit">退出登录</string>
    <string name="are_you_sure_to_exit">确定退出吗？</string>
    <string name="please_enter_your_mobile_number">请输入手机号</string>
    <string name="verification_code">短信验证码</string>
    <string name="please_enter_code_6">请输入6位验证码</string>
    <string name="sign_in_now">立即登录</string>
    <string name="get_code">获取验证码</string>
    <string name="unlock_more_features">解锁使用更多功能</string>
    <string name="renew"></string>
    <string name="problem_feedback">问题反馈</string>
    <string name="shared">分享</string>
    <string name="user_privacy_agreement">用户隐私协议</string>
    <string name="my_news">我的消息</string>
    <string name="unlocking_function">解锁功能</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="distinguish">识别</string>
    <string name="more">更多</string>
    <string name="find_results">查找结果</string>
    <string name="all_select">全选</string>
    <string name="delete">删除</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="open_now">立即开启</string>
</resources>
