<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="loginViewModel"
                type="com.pcl.mvvm.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:orientation="vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/login_title" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_bg"
                android:orientation="vertical"
                android:padding="35dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/tv_gray"
                    android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/bt_login_normal"
                    android:hint="@string/please_enter_your_mobile_number"
                    android:paddingStart="20dp"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingEnd="20dp"
                    android:text="@={loginViewModel.phone}" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/verification_code"
                    android:textColor="@color/tv_gray"
                    android:textSize="12sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/bt_login_normal"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="number"
                        android:maxLength="6"
                        android:hint="@string/please_enter_code_6"
                        android:text="" />

                <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:enabled="@{loginViewModel.code_enabled}"
                        android:onClick="@{() -> loginViewModel.GetVerificationCode()}"
                        android:text="@={loginViewModel.code}"
                        android:textColor="@{loginViewModel.code_enabled?@color/colorPrimary:@color/tv_gray}}"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/tv_login"
                android:layout_width="326.5dp"
                android:layout_height="55dp"
                android:background="@drawable/rect_blue_10"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:onClick="@{() -> loginViewModel.Login()}"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in_now" />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_marginTop="30dp"
                android:textColor="@color/selector_cb_text"
                android:button="@drawable/checkbox_selector"
                android:text="登录后代表您已阅读并同意《用户使用协议》"/>
    </LinearLayout>
</layout>