<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="meViewModel"
                type="com.jime.stu.ui.me.MeViewModel" />

        <import type="android.view.View" />

        <variable
                name="fragment"
                type="com.jime.stu.ui.me.MeFragment" />
    </data>

    <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="我的"
                app:titleTextColor="@color/black">

            <TextView
                    android:id="@+id/tv_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:onClick="@{()->fragment.onExitClick()}"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/login_exit"
                    android:textColor="@color/tv_color"
                    android:textSize="15sp"
                    android:visibility="@{meViewModel.isLogin?View.VISIBLE:View.GONE}" />
        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="@{()->fragment.onToLoginClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

            <ImageView
                    android:id="@+id/img"
                    circlePlaceholder="@{meViewModel.imageDefault}"
                    circleUrl="@{meViewModel.imageUrl}"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="27.5dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/img"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={meViewModel.name}"
                        android:textColor="@color/tv_color"
                        android:textSize="18sp" />

                <TextView
                        android:id="@+id/qianming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@={meViewModel.qianming}"
                        android:textColor="@color/tv_color2"
                        android:textSize="14sp"
                        android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:background="@mipmap/bg_vip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="15dp">

            <ImageView
                    android:id="@+id/iv_member"
                    android:layout_width="29dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/icon_member"
                    android:visibility="@{meViewModel.is_member?View.VISIBLE:View.GONE}" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/iv_member"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/iv_vip"
                        android:layout_width="37dp"
                        android:layout_height="14.5dp"
                        android:src="@mipmap/icon_vip" />

                <TextView
                        android:id="@+id/tv_vip_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@={meViewModel.vipDate}"
                        android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/rect_white_15"
                    android:gravity="center"
                    android:onClick="@{()->fragment.openClick()}"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@{meViewModel.is_member()?@string/renew:@string/unlocking_function}"
                    android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="@{()->fragment.onFeelBackClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

            <ImageView
                    android:layout_width="19.5dp"
                    android:layout_height="20.5dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_feelback" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/problem_feedback"
                    android:textColor="@color/tv_color" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_right" />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:background="@color/tv_gray" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="@{()->fragment.onSharedClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

            <ImageView
                    android:layout_width="19.5dp"
                    android:layout_height="20.5dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_shared" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/shared"
                    android:textColor="@color/tv_color" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_right" />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:background="@color/tv_gray" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="@{()->fragment.onAgreementClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

            <ImageView
                    android:layout_width="19.5dp"
                    android:layout_height="20.5dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_agreement" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/user_privacy_agreement"
                    android:textColor="@color/tv_color" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_right" />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:background="@color/tv_gray" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="@{(view) -> fragment.onMessageClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:visibility="@{meViewModel.is_member?View.VISIBLE:View.GONE}">

            <ImageView
                    android:layout_width="19.5dp"
                    android:layout_height="20.5dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_message" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/my_news"
                    android:textColor="@color/tv_color" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_me_right" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/ll_message"
                    android:visibility="gone"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/tv_color"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:text="新消息" />

                <ImageView
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:background="@drawable/rect_red"/>
            </LinearLayout>
        </RelativeLayout>

        <View
                android:id="@+id/view_my_news"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:background="@color/tv_gray"
                android:visibility="@{meViewModel.is_member?View.VISIBLE:View.GONE}" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemBinding="@{meViewModel.itemBinding}"
                app:items="@{meViewModel.items}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</layout>
